--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rest-express",
+  "name": "solifiedsite",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
@@ -8,7 +8,8 @@
     "build": "vite build",
     "start": "vite preview",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "deploy": "gh-pages -d client"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
@@ -72,8 +73,9 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.31.5",
+    "drizzle-kit": "^0.18.1",
     "esbuild": "^0.25.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
