--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "start": "vite preview",
-    "check": "tsc",
-    "db:push": "drizzle-kit push",
-    "deploy": "gh-pages -d client"
+    "check": "tsc"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
@@ -75,7 +73,6 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.18.1",
     "esbuild": "^0.25.0",
-    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
